<resources>
    <string name="app_name">AppWithSettings</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings2">Settings2</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Activities -->
    <string name="switch_title">Switch option</string>
    <string name="switch_summary">Turn this option on or off</string>
    <string name="check_box_title">Checkbox option</string>
    <string name="check_box_summary">Check this option or not</string>
    <string name="text_title">Text option</string>
    <string name="text_summary">Write something here</string>


</resources>