<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/switch_title"
        android:title="@string/switch_summary" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="example_check"
        android:summary="@string/check_box_summary"
        android:title="@string/check_box_title"
        />

    <androidx.preference.EditTextPreference
        android:defaultValue="@string/text_title"
        android:key="example_text"
        android:summary="@string/text_summary"
        android:title="@string/text_title"
        />
</androidx.preference.PreferenceScreen>